--- a/index.html
+++ b/index.html
@@ -108,7 +108,20 @@
     </div>
          <span><img src="/project/robo-kid.png" alt=""></span>
 
+</section >
+<section class="robot-technology-section area">
+  <div class="robot-technology-image-container">
+    <img src="/project/life-5130779_1920.png" alt="Robot Technology Illustration">
+  </div>
+  <div class="robot-technology-text-container">
+    <span class="title">Lorem Ipsum</span>
+    <h2 class="robot-technology-heading">Ai Robots Technology</h2>
+    <p class="robot-technology-description">
+      Lorem ipsum dolor sit amet consectetur. Ac pellentesque velit ullamcorper nulla odio massa. Viverra dignissim ac vitae interdum consequat elementum sed. Tincidunt porttitor eget et adipiscing sagittis diam. Vitae sed nam vulputate bibendum ornare vitae. Scelerisque sit sed.Lorem ipsum dolor sit amet consectetur. Ac pellentesque velit ullamcorper nulla odio massa. Viverra dignissim ac vitae interdum consequat elementum sed. Tincidunt porttitor eget et adipiscing sagittis diam. Vitae sed nam vulputate bibendum ornare vitae. Scelerisque sit sed.Lorem ipsum dolor sit amet consectetur. Ac pellentesque velit ullamcorper nulla odio massa. Viverra dignissim ac vitae interdum consequat elementum sed. Tincidunt porttitor eget et adipiscing sagittis diam. Vitae sed nam vulputate bibendum ornare vitae. Scelerisque sit sed.
+    </p>
+  </div>
 </section>
+
       
       
 
