--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 </section>
 
-<section class="area">
+<section class="area box">
   <div class="description">
     <p  class="whoarewe">who are we</p>
     <span>We Help To Get Solutions</span>
@@ -122,7 +122,30 @@
   </div>
 </section>
 
-      
+<section class="partner area" >  
+
+  <span class="partnet-title "  >Lorem Ipsum Dollar</span>
+  <div class="company area ">
+  <img src="/project/logo1.png" alt="logo1" >
+  <img src="/project/logo2.png" alt="logo2" >
+  <img src="/project/logo3.png" alt="logo3"">
+  <img src="/project/logo4.png" alt="logo4">
+  <img src="/project/logo5.png" alt="logo5">
+  <img src="/project/Logo 6.png" alt="logo6">>
+  <img src="/project/Logo 7.png" alt="logo7">
+</div>
+<div class="company area">
+  <img src="/project/logo8.png" alt="logo8" >
+  <img src="/project/Logo 9.png" alt="logo9" >
+  <img src="/project/logo 10.png" alt="logo10"">
+  <img src="/project/Logo 11.png" alt="logo11">
+  <img src="/project/Logo 12.png" alt="logo12">
+ 
+</div>
+</section >
+
+<section class="area"></section>
+<span class="partnet-title"  >Upcoming Events</span>
       
 
 </html>
