--- a/index.html
+++ b/index.html
@@ -147,5 +147,22 @@
 <section class="area"></section>
 <span class="partnet-title"  >Upcoming Events</span>
       
+  <div class="event area">  
+
+  <div><img src="/project/Rectangle 12.png" class="border" alt="">
+    <img src="/project/man-1.png" alt="" class="man-1"></div>
+    <div><img src="/project/Rectangle 12.png" class="border" alt="">
+      <img src="/project/man-2.png" alt="" class="man-1"></div>
+  <div> <img src="/project/Rectangle 12.png" class="border" alt="">
+    <img src="/project/woman-1.png" alt="" class="man-1"></div>
+    <div>    <img src="/project/half-border.png" class="border" alt="">
+      <img src="/project/Half-man.png" alt="" class="man-1"></div>
+      </div>
+      
+      <div><p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+      <p>We’ll get you directly seated and inside for you to enjoy the show.</p></div>
+
+
+</div>
 
 </html>
