--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="secondSection.css" />
     <link rel="stylesheet" href="thidsection.css" />
     <link rel="stylesheet" href="fourthsection.css" />
+    <link rel="stylesheet" href="fifthSection.css" />
     <title>Document</title>
   </head>
   <body>
@@ -153,8 +154,8 @@
     </section>
 
     <section class="partner area">
-      <span class="partnet-title flex">Lorem Ipsum Dollar</span>
-      <div class="company area">
+      <span class="partner-title flex">Lorem Ipsum Dollar</span>
+      <div class="company area flex">
         <img src="/project/logo1.png" alt="logo1" />
         <img src="/project/logo2.png" alt="logo2" />
         <img src="/project/logo3.png" alt="logo3" />
@@ -163,60 +164,162 @@
         <img src="/project/Logo 6.png" alt="logo6" />>
         <img src="/project/Logo 7.png" alt="logo7" />
       </div>
-      <div class="company area">
+      <div class="company area flex">
         <img src="/project/logo8.png" alt="logo8" />
         <img src="/project/Logo 9.png" alt="logo9" />
         <img src="/project/logo 10.png" alt="logo10" />
         <img src="/project/Logo 11.png" alt="logo11" />
         <img src="/project/Logo 12.png" alt="logo12" />
       </div>
-      <section class="area"></section>
-
-      <section>
-        <span class="partnet-title flex">Upcoming Events</span>
-
-        <div class="event area flex">
-          <div>
-            <img
-              src="/project/Rectangle 12.png"
-              class="border position"
-              alt=""
-            />
-            <img src="/project/man-1.png" alt="" class="man-1" />
-          </div>
-          <div>
-            <img
-              src="/project/Rectangle 12.png"
-              class="border position"
-              alt=""
-            />
-            <img src="/project/man-2.png" alt="" class="man-1" />
-          </div>
-          <div>
-            <img
-              src="/project/Rectangle 12.png"
-              class="border position"
-              alt=""
-            />
-            <img src="/project/woman-1.png" alt="" class="man-1" />
-          </div>
-          <div>
-            <img
-              src="/project/half-border.png"
-              class="border position"
-              alt=""
-            />
-            <img src="/project/Half-man.png" alt="" class="man-1" />
-          </div>
-        </div>
-
-        <div>
-          <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
-          <p>
-            We’ll get you directly seated and inside for you to enjoy the show.
-          </p>
-        </div>
-      </section>
     </section>
+    <!-- <section class="area">
+      <div class="events-container flex-collum">
+        <h3 class="partner-title flex">Upcoming Events</h3>
+        <div class="event-wrapper flex-row">
+          <div class="event-div flex-collum">
+            <img src="/project/man-1.png" alt="person" />
+            <div class="flex-collum">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="flex-collum">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </div>
+          <div class="event-div flex-collum">
+            <img src="/project/man-2.png" alt="person" />
+            <div class="flex-collum">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="flex-collum">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </div>
+          <div class="event-div flex-collum">
+            <img src="/project/woman-1.png" alt="person" />
+            <div class="flex-collum">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="flex-collum">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </div>
+          <div class="event-div flex-collum">
+            <img src="/project/Half-man.png" alt="person" class="half-event" />
+            <div class="flex-collum">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="flex-collum">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- Sectiion 4 -->
+    <section class="events-area area">
+      <div class="events-container flex-column">
+        <h3 class="events-title flex partner-title">Upcoming Events</h3>
+        <ul class="events-list flex-row">
+          <li class="event flex-column" key="1">
+            <img src="/project/man-1.png" alt="Person performing at an event" />
+            <div class="event-date flex-column">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="event-info flex-column">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </li>
+          <!-- Repeat the li element for other events -->
+          <li class="event flex-column" key="1">
+            <img src="/project/man-2.png" alt="Person performing at an event" />
+            <div class="event-date flex-column">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="event-info flex-column">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </li>
+          <li class="event flex-column" key="1">
+            <img
+              src="/project/woman-1.png"
+              alt="Person performing at an event"
+            />
+            <div class="event-date flex-column">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="event-info flex-column">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </li>
+          <li class="event flex-column" key="1">
+            <img
+              src="/project/Half-man.png"
+              alt="Person performing at an event"
+            />
+            <div class="event-date flex-column">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="event-info flex-column">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Sectiion 4 -->
+
+    <!-- Sectiion 5 -->
+    <section class="frequently area">
+      <div class="question-container flex area">
+        <div class="question-title flex-collum">
+          <h1 class="question-header">Frequent ask qustions</h1>
+          <h3 class="second-question-header">
+            Pellentesque cras adipiscing tempus libero vel nullam mauris tellus.
+            Aliquam ultrices tellus consequat amet, lectus aliquam est in neque.
+          </h3>
+        </div>
+      </div>
+    </section>
+    <!-- Sectiion 5 -->
   </body>
 </html>
