--- a/index.html
+++ b/index.html
@@ -319,6 +319,21 @@
           </h3>
         </div>
       </div>
+      <div class="faq flex-collum area">
+        <div class="flex">
+          <span>How soon will my order ship?</h3>
+          <span>></span>
+        </div>
+
+        <h3>Is there any warranty exclusions?</h3>
+        <h3>
+          Elementum ullamcorper felis nulla scelerisque. Nunc enim nunc mattis
+          leo massa.
+        </h3>
+        <h3>Are there any return exclusions?</h3>
+        <h3>Will I be charged for a replacement item?</h3>
+        <h3>How can I track my orders & payment?</h3>
+      </div>
     </section>
     <!-- Sectiion 5 -->
   </body>
