--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="thidsection.css" />
     <link rel="stylesheet" href="fourthsection.css" />
     <link rel="stylesheet" href="fifthSection.css" />
+    <link rel="stylesheet" href="f.a.q.css" />
+    <link rel="stylesheet" href="footer.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -172,74 +175,11 @@
         <img src="/project/Logo 12.png" alt="logo12" />
       </div>
     </section>
-    <!-- <section class="area">
-      <div class="events-container flex-collum">
-        <h3 class="partner-title flex">Upcoming Events</h3>
-        <div class="event-wrapper flex-row">
-          <div class="event-div flex-collum">
-            <img src="/project/man-1.png" alt="person" />
-            <div class="flex-collum">
-              <span>Apr</span>
-              <span>14</span>
-            </div>
-            <div class="flex-collum">
-              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
-              <p>
-                We’ll get you directly seated and inside for you to enjoy the
-                show.
-              </p>
-            </div>
-          </div>
-          <div class="event-div flex-collum">
-            <img src="/project/man-2.png" alt="person" />
-            <div class="flex-collum">
-              <span>Apr</span>
-              <span>14</span>
-            </div>
-            <div class="flex-collum">
-              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
-              <p>
-                We’ll get you directly seated and inside for you to enjoy the
-                show.
-              </p>
-            </div>
-          </div>
-          <div class="event-div flex-collum">
-            <img src="/project/woman-1.png" alt="person" />
-            <div class="flex-collum">
-              <span>Apr</span>
-              <span>14</span>
-            </div>
-            <div class="flex-collum">
-              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
-              <p>
-                We’ll get you directly seated and inside for you to enjoy the
-                show.
-              </p>
-            </div>
-          </div>
-          <div class="event-div flex-collum">
-            <img src="/project/Half-man.png" alt="person" class="half-event" />
-            <div class="flex-collum">
-              <span>Apr</span>
-              <span>14</span>
-            </div>
-            <div class="flex-collum">
-              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
-              <p>
-                We’ll get you directly seated and inside for you to enjoy the
-                show.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- Sectiion 4 -->
+
     <section class="events-area area">
       <div class="events-container flex-column">
         <h3 class="events-title flex partner-title">Upcoming Events</h3>
-        <ul class="events-list flex-row">
+        <ul class="events-list flex-row area">
           <li class="event flex-column" key="1">
             <img src="/project/man-1.png" alt="Person performing at an event" />
             <div class="event-date flex-column">
@@ -309,32 +249,117 @@
     <!-- Sectiion 4 -->
 
     <!-- Sectiion 5 -->
-    <section class="frequently area">
-      <div class="question-container flex area">
-        <div class="question-title flex-collum">
-          <h1 class="question-header">Frequent ask qustions</h1>
-          <h3 class="second-question-header">
-            Pellentesque cras adipiscing tempus libero vel nullam mauris tellus.
-            Aliquam ultrices tellus consequat amet, lectus aliquam est in neque.
-          </h3>
-        </div>
-      </div>
+    <section class="frequently-asked-questions area">
       <div class="faq flex-collum area">
-        <div class="flex">
-          <span>How soon will my order ship?</h3>
-          <span>></span>
+        <div class="flex-centre faq-header">
+          <p>Frequently Asked Questions</p>
         </div>
-
-        <h3>Is there any warranty exclusions?</h3>
-        <h3>
-          Elementum ullamcorper felis nulla scelerisque. Nunc enim nunc mattis
-          leo massa.
-        </h3>
-        <h3>Are there any return exclusions?</h3>
-        <h3>Will I be charged for a replacement item?</h3>
-        <h3>How can I track my orders & payment?</h3>
+        <div class="flex-centre">
+          <p>
+            Pellentesque cras adipiscing tempus libero vel nullam mauris tellus.
+            Aliquam ultrices tellus consequat amet, lectus aliquam est in
+            neque.?
+          </p>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">How soon will my order ship?</div>
+          <div class="faq-answer">3-5 business days</div>
+          <div class="faq-arrow">▼</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">Is there any warranty exclusions?</div>
+          <div class="faq-answer">1 year international warranty</div>
+          <div class="faq-arrow">▼</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">What is the return policy?</div>
+          <div class="faq-answer">
+            Returns are accepted within 30 days of purchase, as long as the
+            product is in its original condition and packaging.
+          </div>
+          <div class="faq-arrow">▼</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">
+            Will I be charged for a replacement item?
+          </div>
+          <div class="faq-answer">
+            No, there will be no charge for a replacement item if it is covered
+            under the warranty.
+          </div>
+          <div class="faq-arrow">▼</div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">How can I track my order and payment?</div>
+          <div class="faq-answer">
+            You can track your order and payment by logging into your account on
+            our website. The tracking information will be updated as soon as it
+            becomes available.
+          </div>
+          <div class="faq-arrow">▼</div>
+        </div>
       </div>
     </section>
-    <!-- Sectiion 5 -->
+    <footer>
+      <div class="container">
+        <div class="footer-lists">
+          <div class="product-list">
+            <h3>Product</h3>
+            <ul>
+              <li><a href="#">Diam orci</a></li>
+              <li><a href="#">Netus fermentum</a></li>
+              <li><a href="#">Suspendisse viverra</a></li>
+              <li><a href="#">Id dolor</a></li>
+              <li><a href="#">Erat mattis</a></li>
+            </ul>
+          </div>
+          <div class="information-list">
+            <h3>Information</h3>
+            <ul>
+              <li><a href="#">Nibh</a></li>
+              <li><a href="#">Egestas</a></li>
+              <li><a href="#">Dictum</a></li>
+            </ul>
+          </div>
+          <div class="company-list">
+            <h3>Company</h3>
+            <ul>
+              <li><a href="#">Id maecenas</a></li>
+              <li><a href="#">Id orci</a></li>
+              <li><a href="#">Magna ultricies</a></li>
+              <li><a href="#">Quis risus</a></li>
+            </ul>
+          </div>
+          <div class="subscribe">
+            <h3>Subscribe to our newsletter</h3>
+            <form>
+              <input type="email" placeholder="Enter your email" />
+              <button type="submit">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="social-links">
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookies</a>
+          </div>
+          <div class="social-links">
+            <div class="social-links">
+              <a href="https://www.linkedin.com/"
+                ><img src="/project/link.png" alt="LinkedIn"
+              /></a>
+              <a href="https://www.facebook.com/"
+                ><img src="/project/Fb (2).png" alt="Facebook"
+              /></a>
+              <a href="#"
+                ><img src="/project/twitter (2).png" alt="Twitter"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
+  <script src="f.a.q.js"></script>
 </html>
