--- a/test.html
+++ b/test.html
@@ -1,53 +1,47 @@
-<section>
-    <span class="partnet-title flex">Upcoming Events</span>
-
-    <div class="event flex">
-      <div>
-        <img
-          src="/project/Rectangle 12.png"
-          class="border position"
-          alt=""
-        />
-        <img src="/project/man-1.png" alt="" class="man-1" />
-        <div class="descritpion-text flex">
-          <div>
-            <p>Apr</p>
-            <span>Lorem ipsum dolor sit amet consectetur. Mi massa.</span>
-          </div>
-
-          <div>
-            <span
-              >We’ll get you directly seated and inside for you to enjoy the
-              show.</span
-            >
-          </div>
-        </div>
+<section class="frequently-asked-questions area">
+  <div class="faq flex-collum area">
+    <div class="flex-centre faq-header">
+      <p>Frequently Asked Questions</p>
+    </div>
+    <div class="flex-centre">
+      <p>
+        Pellentesque cras adipiscing tempus libero vel nullam mauris tellus.
+        Aliquam ultrices tellus consequat amet, lectus aliquam est in neque.?
+      </p>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">How soon will my order ship?</div>
+      <div class="faq-answer">3-5 business days</div>
+      <div class="faq-arrow">▼</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">Is there any warranty exclusions?</div>
+      <div class="faq-answer">1 year international warranty</div>
+      <div class="faq-arrow">▼</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">What is the return policy?</div>
+      <div class="faq-answer">
+        Returns are accepted within 30 days of purchase, as long as the product
+        is in its original condition and packaging.
       </div>
-      <div>
-        <img
-          src="/project/Rectangle 12.png"
-          class="border position"
-          alt=""
-        />
-        <img src="/project/man-2.png" alt="" class="man-2" />
+      <div class="faq-arrow">▼</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">Will I be charged for a replacement item?</div>
+      <div class="faq-answer">
+        No, there will be no charge for a replacement item if it is covered
+        under the warranty.
       </div>
-
-      <div>
-        <img
-          src="/project/Rectangle 12.png"
-          class="border position"
-          alt=""
-        />
-        <img src="/project/woman-1.png" alt="" class="man-1" />
-      </div>
-      <div>
-        <img
-          src="/project/half-border.png"
-          class="border position"
-          alt=""
-        />
-        <img src="/project/Half-man.png" alt="" class="man-1" />
+      <div class="faq-arrow">▼</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">How can I track my order and payment?</div>
+      <div class="faq-answer">
+        You can track your order and payment by logging into your account on our
+        website. The tracking information will be updated as soon as it becomes
+        available.
       </div>
     </div>
-  </section>
+  </div>
 </section>
