--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <section class="nav">
       <div class="logo">
-        <img src="/project/Logo.png" alt="logo" />
+        <img src="/project/Images/Logo.png" alt="logo" />
       </div>
       <ul class="nav-list">
         <li class="nav-item"><a href="#home">Home</a></li>
@@ -31,7 +31,7 @@
       </ul>
       <ul class="nav-list">
         <li>
-          <img src="/Language.png" alt="Language" />
+          <img src="/project/Images/Language.png" alt="Language" />
         </li>
         <li class="nav-item login"><a href="#login">Login</a></li>
       </ul>
@@ -52,16 +52,24 @@
 
           <div class="stars flex">
             <div class="future flex">
-              <img src="/project/star (3).png" alt="star" class="future" />
               <img
-                src="/project/robot-hand-finger-pointing-ai-technology-backgrou-2022-09-16-09-23-42-utc 1.png"
-                alt=""
+                src="/project/Images/star (3).png"
+                alt="star"
+                class="future"
               />
-              <img src="/project/two stars.png" alt="stars" class="future" />
+              <img
+                src="/project/Images/robot-hand-finger-pointing-ai-technology-backgrou-2022-09-16-09-23-42-utc 1.png"
+                alt="robot-finger"
+              />
+              <img
+                src="/project/images/two stars.png"
+                alt="stars"
+                class="future"
+              />
             </div>
             <div class="ai-text">
               <div class="letter">
-                <img src="/project/Polygon 3.png" alt="polygon" />
+                <img src="/project/Images/Polygon 3.png" alt="polygon" />
               </div>
               <div class="letter">a</div>
               <div class="letter">r</div>
@@ -86,7 +94,7 @@
               <div class="letter">n</div>
               <div class="letter">c</div>
               <div class="letter">e</div>
-              <img src="/project/Subtract.png" alt="" class="letter" />
+              <img src="/project/Images/Subtract.png" alt="" class="letter" />
             </div>
           </div>
         </div>
@@ -105,8 +113,8 @@
         </p>
       </div>
       <div class="lorem-ipsum">
-        <span><img src="/project/eclipse.png" alt="" /></span>
-        <span><img src="/project/rocket.png" alt="" /></span>
+        <span><img src="/project/Images/eclipse.png" alt="eclipse" /></span>
+        <span><img src="/project/Images/rocket.png" alt="rocket" /></span>
         <div>
           <span>Lorem</span>
           <div>
@@ -114,7 +122,7 @@
             industry.
           </div>
         </div>
-        <span><img src="/project/idea.png" alt="" /></span>
+        <span><img src="/project/Images/idea.png" alt="idea" /></span>
         <div>
           <span>Lorem</span>
           <div>
@@ -124,14 +132,14 @@
             </p>
           </div>
         </div>
-        <span><img src="/project/robo-kid.png" alt="" /></span>
+        <span><img src="/project/Images/robo-kid.png" alt="robo-kid" /></span>
       </div>
     </section>
 
     <section class="robot-technology-section area">
       <div class="robot-technology-image-container">
         <img
-          src="/project/life-5130779_1920.png"
+          src="/project/images/life-5130779_1920.png"
           alt="Robot Technology Illustration"
         />
       </div>
@@ -159,20 +167,20 @@
     <section class="partner area">
       <span class="partner-title flex">Lorem Ipsum Dollar</span>
       <div class="company area flex">
-        <img src="/project/logo1.png" alt="logo1" />
-        <img src="/project/logo2.png" alt="logo2" />
-        <img src="/project/logo3.png" alt="logo3" />
-        <img src="/project/logo4.png" alt="logo4" />
-        <img src="/project/logo5.png" alt="logo5" />
-        <img src="/project/Logo 6.png" alt="logo6" />>
-        <img src="/project/Logo 7.png" alt="logo7" />
+        <img src="/project/images/logo1.png" alt="logo1" />
+        <img src="/project/images/logo2.png" alt="logo2" />
+        <img src="/project/images/logo3.png" alt="logo3" />
+        <img src="/project/images/logo4.png" alt="logo4" />
+        <img src="/project/images/logo5.png" alt="logo5" />
+        <img src="/project/images/Logo 6.png" alt="logo6" />>
+        <img src="/project/images/Logo 7.png" alt="logo7" />
       </div>
       <div class="company area flex">
-        <img src="/project/logo8.png" alt="logo8" />
-        <img src="/project/Logo 9.png" alt="logo9" />
-        <img src="/project/logo 10.png" alt="logo10" />
-        <img src="/project/Logo 11.png" alt="logo11" />
-        <img src="/project/Logo 12.png" alt="logo12" />
+        <img src="/project/images/logo8.png" alt="logo8" />
+        <img src="/project/images/Logo 9.png" alt="logo9" />
+        <img src="/project/images/logo 10.png" alt="logo10" />
+        <img src="/project/images/Logo 11.png" alt="logo11" />
+        <img src="/project/images/Logo 12.png" alt="logo12" />
       </div>
     </section>
 
@@ -181,7 +189,10 @@
         <h3 class="events-title flex partner-title">Upcoming Events</h3>
         <ul class="events-list flex-row area">
           <li class="event flex-column" key="1">
-            <img src="/project/man-1.png" alt="Person performing at an event" />
+            <img
+              src="/project/images/man-1.png"
+              alt="Person performing at an event"
+            />
             <div class="event-date flex-column">
               <span>Apr</span>
               <span>14</span>
@@ -196,22 +207,8 @@
           </li>
           <!-- Repeat the li element for other events -->
           <li class="event flex-column" key="1">
-            <img src="/project/man-2.png" alt="Person performing at an event" />
-            <div class="event-date flex-column">
-              <span>Apr</span>
-              <span>14</span>
-            </div>
-            <div class="event-info flex-column">
-              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
-              <p>
-                We’ll get you directly seated and inside for you to enjoy the
-                show.
-              </p>
-            </div>
-          </li>
-          <li class="event flex-column" key="1">
             <img
-              src="/project/woman-1.png"
+              src="/project/images/man-2.png"
               alt="Person performing at an event"
             />
             <div class="event-date flex-column">
@@ -228,7 +225,24 @@
           </li>
           <li class="event flex-column" key="1">
             <img
-              src="/project/Half-man.png"
+              src="/project/images/woman-1.png"
+              alt="Person performing at an event"
+            />
+            <div class="event-date flex-column">
+              <span>Apr</span>
+              <span>14</span>
+            </div>
+            <div class="event-info flex-column">
+              <p>Lorem ipsum dolor sit amet consectetur. Mi massa.</p>
+              <p>
+                We’ll get you directly seated and inside for you to enjoy the
+                show.
+              </p>
+            </div>
+          </li>
+          <li class="event flex-column" key="1">
+            <img
+              src="/project/images/Half-man.png"
               alt="Person performing at an event"
             />
             <div class="event-date flex-column">
@@ -347,13 +361,13 @@
           <div class="social-links">
             <div class="social-links">
               <a href="https://www.linkedin.com/"
-                ><img src="/project/link.png" alt="LinkedIn"
+                ><img src="/project/images/link.png" alt="LinkedIn"
               /></a>
               <a href="https://www.facebook.com/"
-                ><img src="/project/Fb (2).png" alt="Facebook"
+                ><img src="/project/images/Fb (2).png" alt="Facebook"
               /></a>
               <a href="#"
-                ><img src="/project/twitter (2).png" alt="Twitter"
+                ><img src="/project/images/twitter (2).png" alt="Twitter"
               /></a>
             </div>
           </div>
