--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="modal.css" />
     <link rel="stylesheet" href="navigation.css" />
     <link rel="stylesheet" href="firsSection.css" />
     <link rel="stylesheet" href="secondSection.css" />
@@ -18,6 +19,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Navigation  -->
     <section class="nav">
       <div class="logo">
         <img src="/project/Images/Logo.png" alt="logo" />
@@ -33,9 +35,27 @@
         <li>
           <img src="/project/Images/Language.png" alt="Language" />
         </li>
-        <li class="nav-item login"><a href="#login">Login</a></li>
+        <li class="nav-item login" id="loginBtn">Login</li>
       </ul>
     </section>
+
+    <div class="modal" id="myModal">
+      <div class="modal-content">
+        <span class="close" id="closeBtn">&times;</span>
+        <h3>Login</h3>
+        <form>
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" required />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required />
+          <input type="submit" value="Submit" />
+        </form>
+        <p>
+          Not a member? <a href="signup.html" class="signup-link">Sign up</a>
+        </p>
+      </div>
+    </div>
+    <!-- Navigation  -->
 
     <section>
       <div class="hero">
@@ -315,8 +335,8 @@
       </div>
     </section>
     <footer>
-      <div class="container">
-        <div class="footer-lists">
+      <div class="container area">
+        <div class="footer-lists flex-centre">
           <div class="product-list">
             <h3>Product</h3>
             <ul>
@@ -345,11 +365,11 @@
             </ul>
           </div>
           <div class="subscribe">
-            <h3>Subscribe to our newsletter</h3>
-            <form>
+            <div>
               <input type="email" placeholder="Enter your email" />
               <button type="submit">Subscribe</button>
-            </form>
+              <h3>Subscribe to our newsletter</h3>
+            </div>
           </div>
         </div>
         <div class="footer-bottom">
@@ -375,5 +395,6 @@
       </div>
     </footer>
   </body>
+  <script src="modal.js"></script>
   <script src="f.a.q.js"></script>
 </html>
