add new login functionality

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <li>
           <img src="/project/Images/Language.png" alt="Language" />
         </li>
-        <li class="nav-item login" id="loginBtn">Login</li>
+        <li class="nav-item username login" id="username">Login</li>
       </ul>
     </section>
-
+  
     <div class="modal" id="myModal">
       <div class="modal-content">
         <span class="close" id="closeBtn">&times;</span>
-        <h3>Login</h3>
+        <h3 >Login</h3>
         <form>
           <label for="username">Username:</label>
-          <input type="text" id="username" name="username" required />
+          <input type="text" id="usernameInput" name="username" required />
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" required />
           <input type="submit" value="Submit" />
@@ -58,6 +58,7 @@
         </p>
       </div>
     </div>
+    </section>
     <!-- Navigation  -->
 
     <section>
@@ -207,7 +208,7 @@
       </div>
     </section>
 
-    <section class="events-area area" id="features">
+    <section class="events-area" id="features">
       <div class="events-container flex-column">
         <h3 class="events-title flex partner-title">Upcoming Events</h3>
         <ul class="events-list flex-row area">
