--- a/sign up/signup.html
+++ b/sign up/signup.html
@@ -42,5 +42,6 @@
     </div>
 
     <script type="text/javascript" src="signup.js "></script>
+    <script src="/project/modal.js"></script>
   </body>
 </html>
